--- a/index.htm
+++ b/index.htm
@@ -527,6 +527,10 @@ UART改造</a><br>
     <a href="handheld/pandora_rebirth_superzaxxon_fix_hal.htm">
     解決Config/hal: couldn't initialise context: unknown error null問題</a><br>
 
+    &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_ssh.htm">
+    解決no matching host key type found. Their offer: ssh-rsa,ssh-dss問題</a><br>
+
     &emsp;&emsp;&emsp;&emsp;&oplus;
     <b>Python</b><br>
 
