--- a/handheld/pandora_rebirth_superzaxxon_es2_setup.htm
+++ b/handheld/pandora_rebirth_superzaxxon_es2_setup.htm
@@ -8,7 +8,18 @@
 參考資訊：<br>
 https://pandorawiki.org/GLES<br><br>
 
-所有開發需要的套件都已經包含在codeblocks.pnd
+步驟如下：
 </p>
+<pre>
+$ sudo /usr/pandora/scripts/pnd_run.sh -p /media/GAME/pandora/menu/codeblocks.pnd -m
+
+$ export DISPLAY=:0
+$ export PATH=/mnt/utmp/codeblocks/usr/bin:$PATH
+
+$ gcc main.c -o main -I/mnt/utmp/codeblocks/usr/include/SDL2 -lSDL2 -lGLESv2
+$ op_runfbapp ./main
+
+$ sudo /usr/pandora/scripts/pnd_run.sh -p /media/GAME/pandora/menu/codeblocks.pnd -u
+</pre>
 
 <br><script type="text/javascript" src="../tail.js"></script>
