--- a/index.htm
+++ b/index.htm
@@ -555,6 +555,10 @@ UART改造</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/pandora_rebirth_superzaxxon_es2_version.htm">
         Get Version</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_fill.htm">
+        Fill Color</a><br>
 <br><br><br><br>
 
 <div id="pandora3"></div>
