Pandora Added more examples for opengles 2.0.

--- a/handheld/pandora_rebirth_superzaxxon_es2_setup.htm
+++ b/handheld/pandora_rebirth_superzaxxon_es2_setup.htm
@@ -15,6 +15,7 @@ $ sudo /usr/pandora/scripts/pnd_run.sh -p /media/GAME/pandora/menu/codeblocks.pn
 
 $ export DISPLAY=:0
 $ export PATH=/mnt/utmp/codeblocks/usr/bin:$PATH
+$ export LD_LIBRARY_PATH=/mnt/utmp/codeblocks/usr/lib:$LD_LIBRARY_PATH
 
 $ gcc main.c -o main -I/mnt/utmp/codeblocks/usr/include/SDL2 -lSDL2 -lGLESv2
 $ op_runfbapp ./main
