--- a/index.htm
+++ b/index.htm
@@ -559,6 +559,14 @@ UART改造</a><br>
         &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
         <a href="handheld/pandora_rebirth_superzaxxon_es2_fill.htm">
         Fill Color</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_triangle.htm">
+        Draw Triangle</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&dash;
+        <a href="handheld/pandora_rebirth_superzaxxon_es2_shader.htm">
+        Use Shader</a><br>
 <br><br><br><br>
 
 <div id="pandora3"></div>
