--- a/handheld/pandora_rebirth_superzaxxon_es2_shader.htm
+++ b/handheld/pandora_rebirth_superzaxxon_es2_shader.htm
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head><script type="text/javascript" src="../page_head.js"></script>
 
-<h3><a href="../index.htm">掌機</a> - Pandora(Rebirth) - SuperZaxxon - OpenGL ES 2.0 - <b>Fill Color</b></h3>
+<h3><a href="../index.htm">掌機</a> - Pandora(Rebirth) - SuperZaxxon - OpenGL ES 2.0 - <b>Use Shader</b></h3>
 <hr size="1"><br>
 <p>
 參考資訊：<br>
@@ -23,8 +23,22 @@ main.c
 #define LCD_W   800
 #define LCD_H   480
  
-const char *vShaderSrc = "void main(void){}";
-const char *fShaderSrc = "void main(void){}";
+const char *vShaderSrc = 
+    "attribute vec4 vPosition;    \n"
+    "void main(void)              \n"
+    "{                            \n"
+    "    gl_Position = vPosition; \n"
+    "}";
+  
+const char *fShaderSrc =
+    "#ifdef GL_ES               \n"
+    "precision mediump float;   \n"
+    "#endif                     \n"
+    "uniform vec4 vColor;       \n"
+    "void main(void)            \n"
+    "{                          \n"
+    "    gl_FragColor = vColor; \n"
+    "}";
  
 int main(int argc, char** argv)
 {
@@ -38,9 +52,9 @@ int main(int argc, char** argv)
     EGLint config_attribs[] = {
         EGL_SURFACE_TYPE,    EGL_WINDOW_BIT,
         EGL_RENDERABLE_TYPE, EGL_OPENGL_ES2_BIT,
-        EGL_RED_SIZE,   5,  
+        EGL_RED_SIZE,   5,
         EGL_GREEN_SIZE, 6,
-        EGL_BLUE_SIZE,  5,  
+        EGL_BLUE_SIZE,  5,
         EGL_ALPHA_SIZE, 0,
         EGL_NONE
     };
@@ -56,6 +70,11 @@ int main(int argc, char** argv)
     GLuint fShader = 0;
     GLuint pObject = 0;
     GLint compiled = 0;
+    GLfloat vVertices[] = {
+         0.0f,  0.5f, 0.0f,
+        -0.5f, -0.5f, 0.0f,
+         0.5f, -0.5f, 0.0f
+    };
   
     display = eglGetDisplay(EGL_DEFAULT_DISPLAY);
     eglInitialize(display, &amp;egl_major, &amp;egl_minor);
@@ -81,8 +100,19 @@ int main(int argc, char** argv)
     glUseProgram(pObject);
   
     glViewport(0, 0, LCD_W, LCD_H);
-    glClearColor(1.0f, 0.0f, 0.0f, 1.0f);
+    glClearColor(0.0f, 0.0f, 0.0f, 1.0f);
     glClear(GL_COLOR_BUFFER_BIT);
+ 
+    GLuint vp = glGetAttribLocation(pObject, "vPosition");
+    glVertexAttribPointer(vp, 3, GL_FLOAT, GL_FALSE, 0, vVertices);
+    glEnableVertexAttribArray(vp);
+  
+    GLuint vc = glGetUniformLocation(pObject, "vColor");
+    glUniform4f(vc, 1.0f, 0.0f, 0.0f, 1.0f);
+  
+    glViewport(0, 0, LCD_W, LCD_H);
+    glClear(GL_COLOR_BUFFER_BIT);
+    glDrawArrays(GL_TRIANGLES, 0, 3);
     eglSwapBuffers(display, surface);
     system("fbgrab main.png");
     sleep(3);
@@ -105,7 +135,7 @@ $ op_runfbapp ./main
 
 <p>
 完成<br>
-<img src="pandora_rebirth_superzaxxon_es2_fill/1.jpg" class="maxSize">
+<img src="pandora_rebirth_superzaxxon_es2_shader/1.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
