Debian How to usb --library-path when launch elf file.

--- a/system.htm
+++ b/system.htm
@@ -67,6 +67,10 @@ Parameter(--)</a><br>
 Shell Script($、{}、%、#)</a><br>
 
 &dash;
+<a href="system/debian_ldpath.htm">
+LD_LIBRARY_PATH、--library-path</a><br>
+
+&dash;
 <a href="system/debian_fonts.htm">
 如何安裝中文字型</a><br>
 
