--- a/index.htm
+++ b/index.htm
@@ -504,6 +504,10 @@ UART改造</a><br>
     解決SCP Connection Refused問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_ncurses.htm">
+    解決tgetent()... configure: error: NOT FOUND問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_getline.htm">
     解決Implicit declaration of function getline問題</a><br>
 
