--- a/index.htm
+++ b/index.htm
@@ -488,6 +488,10 @@ UART改造</a><br>
     Build Libiconv</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_build_gcc.htm">
+    Build GCC 9.3.0</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_build_pcsx_rearmed.htm">
     Build PCSX ReARMed</a><br>
 
