--- a/index.htm
+++ b/index.htm
@@ -508,6 +508,10 @@ UART改造</a><br>
     解決SCP Connection Refused問題</a><br>
 
     &emsp;&emsp;&emsp;&emsp;&dash;
+    <a href="handheld/pandora_rebirth_superzaxxon_fix_csu.htm">
+    解決Undefined reference to __libc_csu_fini問題</a><br>
+
+    &emsp;&emsp;&emsp;&emsp;&dash;
     <a href="handheld/pandora_rebirth_superzaxxon_fix_ncurses.htm">
     解決tgetent()... configure: error: NOT FOUND問題</a><br>
 
