--- a/trip/india_bangalore.htm
+++ b/trip/india_bangalore.htm
@@ -9,116 +9,338 @@
 https://hwsln.pixnet.net/blog/post/65918839<br>
 https://www.backpackers.com.tw/forum/showthread.php?t=1301568#post7078137<br><br>
 
-<img src="india_bangalore/1.jpg" class="maxSize"><br><br>
+司徒這次去印度的主要目的是參加客戶舉辦的會議，而在會議結束後，司徒選擇多停留兩天，順便去印度的其它景點逛逛，因此，司徒就順便記錄這個旅遊過程，以供日後參考<br><br>
+
+仔細聆聽印度英文就可以發現，很多字聽不懂，聽不懂的原因在於這些字的發音，跟我們一般聽到的發音不太一樣，有些發音會被轉成相似的發音，如下幾個例子：<br>
+P =&gt; B<br>
+T =&gt; D<br>
+R =&gt; L<br>
+AI =&gt; I<br>
+所以像Rate這個字，我們習慣聽到的音是"略特"，但是印度人會唸成"雷"，而且還是拉長音的"雷"，所以當司徒第一次聽到時，心中的疑問就是這個字我真的有學過嗎？所以當司徒知道要去印度出差時，便開始尋找跟印度有關的影片，藉此讓自己可以更快熟悉印度的發音，司徒的訓練方式是，找個大約15分鐘的短片，不開字幕聽一次，接着開啓Google的自動英文翻譯字幕聽一次(翻譯的準確度會因內容而異)，早晚各花30分鐘訓練，司徒發現這種訓練方式大約在三週後就可以看到效果，這裡的重點是需要專心聽，在訓練英文聽力時，千萬不要使用背景音樂方式來訓練，效果會大打折扣<br><br>
+
+司徒推薦聽Think School的影片，只要挑選Case Study的影片就可以，因爲這些影片的時間大多落在15~20分鐘<br>
 <img src="india_bangalore/2.jpg" class="maxSize"><br><br>
+
+新聞類的影片，司徒推薦聽DW News，尤其如下這位主播的口音，推薦多聽幾次<br>
+<img src="india_bangalore/1.jpg" class="maxSize"><br><br>
+
+由於司徒搭乘的飛機是從臺灣飛到新加坡，接著再從新加坡飛往印度邦加羅爾機場，而停留在新加坡機場的時間大約是10小時，因此，司徒就在新加坡中轉飯店休息6個小時(建議提前預訂)，第一、第二、第三航廈都有中轉飯店且不需要出境就可以入住，航廈間也都可以坐轉接車互通，新加坡機場是真的相當方便，所以中轉飯店如果客滿，可以試着到其它航廈詢問<br>
 <img src="india_bangalore/3.jpg" class="maxSize"><br><br>
+
+房間是真的蠻多的<br>
 <img src="india_bangalore/4.jpg" class="maxSize"><br><br>
+
+休息6小時大約是5300臺幣，雖然價格有點貴，不過可以好好睡上一覺，這價位還是值得<br>
 <img src="india_bangalore/5.jpg" class="maxSize"><br><br>
+
+邦加羅爾第一航廈<br>
 <img src="india_bangalore/6.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/7.jpg" class="maxSize"><br><br>
+
+入住的五星級飯店，一晚要價6000臺幣，在當地算是相當高檔的飯店<br>
+<img src="india_bangalore/7.jpg" class="maxSize"><br>
 <img src="india_bangalore/8.jpg" class="maxSize"><br><br>
+
+房間還算不錯，不過司徒怕拉肚子，所以刷牙都是使用礦泉水，而非水龍頭的水<br>
 <img src="india_bangalore/9.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/10.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/11.jpg" class="maxSize"><br><br>
+
+飯店樓頂的視野<br>
+<img src="india_bangalore/10.jpg" class="maxSize"><br>
+<img src="india_bangalore/11.jpg" class="maxSize"><br>
 <img src="india_bangalore/12.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/13.jpg" class="maxSize"><br><br>
+
+一般馬路是沒有紅綠燈，所以過馬路需要相當小心<br>
+<img src="india_bangalore/13.jpg" class="maxSize"><br>
 <img src="india_bangalore/14.jpg" class="maxSize"><br><br>
+
+附件的一個商場<br>
 <img src="india_bangalore/15.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/16.jpg" class="maxSize"><br><br>
+
+沿路的美景<br>
+<img src="india_bangalore/16.jpg" class="maxSize"><br>
 <img src="india_bangalore/17.jpg" class="maxSize"><br><br>
+
+麥當勞<br>
 <img src="india_bangalore/18.jpg" class="maxSize"><br><br>
+
+印度的超商比較少，司徒跟着路人走，才發現這家超商<br>
 <img src="india_bangalore/19.jpg" class="maxSize"><br><br>
+
+路邊的道路有些破舊，走在路邊記得小心<br>
 <img src="india_bangalore/20.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/21.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/22.jpg" class="maxSize"><br><br>
+
+飯店的早餐<br>
+<img src="india_bangalore/21.jpg" class="maxSize"><br>
+<img src="india_bangalore/22.jpg" class="maxSize"><br>
 <img src="india_bangalore/23.jpg" class="maxSize"><br><br>
+
+吃早餐時，往外看出去的美景<br>
 <img src="india_bangalore/24.jpg" class="maxSize"><br><br>
+
+印度塔塔車，司徒習慣直接喊價，所以每次搭乘的價格都不一樣<br>
 <img src="india_bangalore/25.jpg" class="maxSize"><br><br>
+
+司機發現開錯路，竟然直接原路逆向開回去<br>
 <img src="india_bangalore/26.jpg" class="maxSize"><br><br>
+
+原本要吃的午餐店，看了下後，還是決定吃對面的餐廳<br>
 <img src="india_bangalore/27.jpg" class="maxSize"><br><br>
+
+超辣的玉米咖哩<br>
 <img src="india_bangalore/28.jpg" class="maxSize"><br><br>
+
+吃完午餐後，沿路散步到客戶辦公室<br>
 <img src="india_bangalore/29.jpg" class="maxSize"><br><br>
+
+幼兒園<br>
 <img src="india_bangalore/30.jpg" class="maxSize"><br><br>
+
+垃圾車<br>
 <img src="india_bangalore/31.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
 <img src="india_bangalore/32.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/33.jpg" class="maxSize"><br><br>
+
+客戶園區就是另一個世界的感覺<br>
+<img src="india_bangalore/33.jpg" class="maxSize"><br>
 <img src="india_bangalore/34.jpg" class="maxSize"><br><br>
+
+當天晚上跟客戶吃飯的地方，在捷運站附近<br>
 <img src="india_bangalore/35.jpg" class="maxSize"><br><br>
+
+晚餐的地方<br>
 <img src="india_bangalore/51.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/36.jpg" class="maxSize"><br><br>
+
+環境還不錯，不過蚊子有點多<br>
+<img src="india_bangalore/36.jpg" class="maxSize"><br>
 <img src="india_bangalore/37.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/38.jpg" class="maxSize"><br><br>
+
+由於是中秋節，所以今晚的月亮特別圓，原來，國外的月亮總是特別圓是真的<br>
+<img src="india_bangalore/38.jpg" class="maxSize"><br>
 <img src="india_bangalore/39.jpg" class="maxSize"><br><br>
+
+前菜<br>
 <img src="india_bangalore/40.jpg" class="maxSize"><br><br>
+
+IPA啤酒，淡淡果香，還蠻好喝的<br>
 <img src="india_bangalore/41.jpg" class="maxSize"><br><br>
+
+好吃的雞肉<br>
 <img src="india_bangalore/42.jpg" class="maxSize"><br><br>
+
+味道跟口感，蠻像蝦味仙餅乾<br>
 <img src="india_bangalore/43.jpg" class="maxSize"><br><br>
+
+洋蔥圈<br>
 <img src="india_bangalore/44.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/45.jpg" class="maxSize"><br><br>
+
+園區內的餐廳，裡面很多餐廳不收國外信用卡、現金，加上司徒沒有Paytm電子支付，所以只能點炒飯來吃<br>
+<img src="india_bangalore/45.jpg" class="maxSize"><br>
 <img src="india_bangalore/46.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/47.jpg" class="maxSize"><br><br>
+
+麥當勞雞肉卷，這雞肉卷蠻好吃的，因爲，還蠻辣的<br>
+<img src="india_bangalore/47.jpg" class="maxSize"><br>
 <img src="india_bangalore/48.jpg" class="maxSize"><br><br>
+
+晚餐<br>
 <img src="india_bangalore/49.jpg" class="maxSize"><br><br>
+
+這月亮是真美<br>
 <img src="india_bangalore/50.jpg" class="maxSize"><br><br>
+
+開放空間的缺點就是隔壁有人會吸菸，所以大大影響用餐體驗<br>
 <img src="india_bangalore/52.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/53.jpg" class="maxSize"><br><br>
+
+前菜<br>
+<img src="india_bangalore/53.jpg" class="maxSize"><br>
 <img src="india_bangalore/54.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/55.jpg" class="maxSize"><br><br>
+
+印度烤餅配上這個辣味羊肉咖哩，真的好吃<br>
+<img src="india_bangalore/55.jpg" class="maxSize"><br>
 <img src="india_bangalore/56.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/57.jpg" class="maxSize"><br><br>
+
+蝦餃<br>
 <img src="india_bangalore/58.jpg" class="maxSize"><br><br>
+
+辣雞肉炒飯<br>
 <img src="india_bangalore/59.jpg" class="maxSize"><br><br>
+
+邊吃飯邊看國外的月亮，這體驗還是相當棒<br>
+<img src="india_bangalore/57.jpg" class="maxSize"><br><br>
+
+司徒是依照網路分享的景點走訪，這些景點都是位於National College捷運站附近，所以司徒查了下飯店附件的捷運站，最近的捷運站就是Hoodi捷運站<br>
 <img src="india_bangalore/60.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/61.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/62.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/63.jpg" class="maxSize"><br><br>
+
+在印度，Uber是一個相當方便的交通工具，價格也相對便宜，不過，司徒有遇過，一上車後，司機會叫你把Uber訂單取消，然後開雙倍價格並要求付現金，也遇過Uber司機打電話詢問搭車地點(透過Uber App打電話)，然後講的是完全聽不懂的語言，雖然意外狀況總是難免會發生，不過畢竟還是少數狀況(司徒只有各遇過一次)，所以也不用太在意這些狀況，避免影響到旅遊興致<br>
 <img src="india_bangalore/64.jpg" class="maxSize"><br><br>
+
+第一個景點是Bull Temple(位於National College捷運站附近)<br>
+<img src="india_bangalore/61.jpg" class="maxSize"><br><br>
+
+第二個景點這是Lalbagh Botanical Garden(位於National College捷運站附近)<br>
+<img src="india_bangalore/62.jpg" class="maxSize"><br><br>
+
+最後一個景點這是Tipu Sultan's Summer Palace(位於National College捷運站附近)<br>
+<img src="india_bangalore/63.jpg" class="maxSize"><br><br>
+
+Hoodi捷運站<br>
 <img src="india_bangalore/65.jpg" class="maxSize"><br><br>
+
+沒有自動賣票機器，然後，服務窗口竟然也沒人，旁邊的Whats App看板寫着可以買票，司徒付款後，拿到一串ID，只是不知道去哪換票<br>
 <img src="india_bangalore/66.jpg" class="maxSize"><br><br>
+
+最後尋問許多人後，才知道可以到這邊買票，但是，現金是不找零錢<br>
 <img src="india_bangalore/67.jpg" class="maxSize"><br><br>
+
+最後，司徒終於拿到Token<br>
 <img src="india_bangalore/68.jpg" class="maxSize"><br><br>
+
+捷運站內還是很乾淨<br>
 <img src="india_bangalore/69.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/70.jpg" class="maxSize"><br><br>
+
+捷運月臺<br>
+<img src="india_bangalore/70.jpg" class="maxSize"><br>
 <img src="india_bangalore/71.jpg" class="maxSize"><br><br>
+
+車廂內<br>
 <img src="india_bangalore/72.jpg" class="maxSize"><br><br>
+
+車內的路線圖，行車中會廣播下一站，印度文、英文各廣播一次<br>
 <img src="india_bangalore/73.jpg" class="maxSize"><br><br>
+
+車站內也會有路線圖<br>
 <img src="india_bangalore/74.jpg" class="maxSize"><br><br>
+
+邦加羅爾捷運，目前只有紫色、綠色兩條路線，中間有一個交會站<br>
 <img src="india_bangalore/75.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/76.jpg" class="maxSize"><br><br>
+
+蠻多人搭乘捷運<br>
+<img src="india_bangalore/76.jpg" class="maxSize"><br>
 <img src="india_bangalore/77.jpg" class="maxSize"><br><br>
+
+柱子也有貼路線圖<br>
 <img src="india_bangalore/78.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/79.jpg" class="maxSize"><br><br>
+
+等車月臺<br>
+<img src="india_bangalore/79.jpg" class="maxSize"><br>
 <img src="india_bangalore/80.jpg" class="maxSize"><br><br>
+
+牆壁的路線指示<br>
 <img src="india_bangalore/81.jpg" class="maxSize"><br><br>
+
+公車站<br>
 <img src="india_bangalore/82.jpg" class="maxSize"><br><br>
+
+加油站<br>
 <img src="india_bangalore/83.jpg" class="maxSize"><br><br>
+
+路上的牛大便<br>
 <img src="india_bangalore/84.jpg" class="maxSize"><br><br>
+
+路上的牛<br>
 <img src="india_bangalore/85.jpg" class="maxSize"><br><br>
+
+沿路景點<br>
 <img src="india_bangalore/86.jpg" class="maxSize"><br><br>
+
+路上的廁所，有些需要收費，有些則是免費<br>
 <img src="india_bangalore/87.jpg" class="maxSize"><br><br>
+
+司徒這次忘記帶喉糖，加上有些感冒症狀，所以路上看到藥局就直接進去買喉糖，效果還不錯<br>
 <img src="india_bangalore/88.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/89.jpg" class="maxSize"><br><br>
+
+沿路美景<br>
+<img src="india_bangalore/89.jpg" class="maxSize"><br>
 <img src="india_bangalore/90.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/91.jpg" class="maxSize"><br><br>
+
+進入Bull Temple需要先脫鞋，雖然地上很髒亂，不過入境隨俗，然後，拖鞋的地方需要給小費，司徒看本地人是給10盧比小費，不過，司徒身上只有100盧比，於是，司徒心想那就100盧比小費，結果竟然找回50盧比給司徒，哈<br>
 <img src="india_bangalore/92.jpg" class="maxSize"><br><br>
+
+Bull Temple的參觀順序是先進去這裡<br>
+<img src="india_bangalore/91.jpg" class="maxSize"><br><br>
+
+跟隨本地人的動作就可以<br>
 <img src="india_bangalore/93.jpg" class="maxSize"><br><br>
+
+旁邊不知道是什麼東西<br>
 <img src="india_bangalore/94.jpg" class="maxSize"><br><br>
+
+階梯旁有個公園，司徒一開始以爲是有人在公園玩耍，結果發現是超逼真的假人<br>
 <img src="india_bangalore/95.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/96.jpg" class="maxSize"><br><br>
+
+裡面在整修中<br>
+<img src="india_bangalore/96.jpg" class="maxSize"><br>
 <img src="india_bangalore/97.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/98.jpg" class="maxSize"><br><br>
+
+主廟裡面是不允許拍照，只能站在外面拍照，參觀後需要依照心意樂捐<br>
+<img src="india_bangalore/98.jpg" class="maxSize"><br>
 <img src="india_bangalore/99.jpg" class="maxSize"><br><br>
+
+主廟前的廣場<br>
 <img src="india_bangalore/100.jpg" class="maxSize"><br><br>
+
+其它景點<br>
 <img src="india_bangalore/101.jpg" class="maxSize"><br><br>
+
+門外的牛<br>
 <img src="india_bangalore/102.jpg" class="maxSize"><br><br>
+
+路上看到的公車都是比較破舊的公車<br>
 <img src="india_bangalore/103.jpg" class="maxSize"><br><br>
+
+路邊賣水果的攤販<br>
 <img src="india_bangalore/104.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/105.jpg" class="maxSize"><br><br>
+
+加油站裡面的廁所<br>
+<img src="india_bangalore/105.jpg" class="maxSize"><br>
 <img src="india_bangalore/106.jpg" class="maxSize"><br><br>
+
+路邊的建築工人<br>
 <img src="india_bangalore/107.jpg" class="maxSize"><br><br>
+
+Lalbagh Botanical Garden路口<br>
 <img src="india_bangalore/108.jpg" class="maxSize"><br><br>
 <img src="india_bangalore/109.jpg" class="maxSize"><br><br>
 <img src="india_bangalore/110.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/111.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/112.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/113.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/114.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/115.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/116.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/117.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/118.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/119.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/120.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/121.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/122.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/123.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/124.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/125.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/126.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/127.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/128.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/129.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/130.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/131.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/132.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/133.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/134.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/135.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/136.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/137.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/138.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/139.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/140.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/141.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/142.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/143.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/144.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/145.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/146.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/147.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/148.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/149.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/150.jpg" class="maxSize"><br><br>
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
