--- a/trip/india_bangalore.htm
+++ b/trip/india_bangalore.htm
@@ -6,25 +6,32 @@
 <hr size="1"><br>
 <p>
 參考資訊：<br>
+https://www.cw.com.tw/article/5117658<br>
 https://hwsln.pixnet.net/blog/post/65918839<br>
 https://www.backpackers.com.tw/forum/showthread.php?t=1301568#post7078137<br><br>
 
-司徒這次去印度的主要目的是參加客戶舉辦的會議，而在會議結束後，司徒選擇多停留兩天，順便去印度的其它景點逛逛，因此，司徒就順便記錄這個旅遊過程，以供日後參考<br><br>
+司徒這次去印度的主要目的是參加客戶舉辦的會議，而在會議結束後，司徒選擇多停留兩天，順便去印度的其它景點逛逛，因此，司徒就順便記錄這個旅遊過程，以供日後參考，而對司徒來說，印度英文還是比較難聽懂，因此，司徒上網找了一下相關資料，發現，聽不懂的原因在於有些字的發音，會被印度人唸成其它相似的發音，如下幾個例子：
+</p>
+<table>
+<tr><th>原本發音</th><th>印度發音</th></tr>
+<tr><td>P</td><td>B</td></tr>
+<tr><td>T</td><td>D</td></tr>
+<tr><td>R</td><td>L</td></tr>
+<tr><td>AI</td><td>I</td></tr>
+</table>
+<p>
+所以像Rate這個字，我們習慣聽到的發音是"略特"，但是印度人會唸成"雷"，而且還是拉長音的"雷"<br><br>
 
-仔細聆聽印度英文就可以發現，很多字聽不懂，聽不懂的原因在於這些字的發音，跟我們一般聽到的發音不太一樣，有些發音會被轉成相似的發音，如下幾個例子：<br>
-P =&gt; B<br>
-T =&gt; D<br>
-R =&gt; L<br>
-AI =&gt; I<br>
-所以像Rate這個字，我們習慣聽到的音是"略特"，但是印度人會唸成"雷"，而且還是拉長音的"雷"，所以當司徒第一次聽到時，心中的疑問就是這個字我真的有學過嗎？所以當司徒知道要去印度出差時，便開始尋找跟印度有關的影片，藉此讓自己可以更快熟悉印度的發音，司徒的訓練方式是，找個大約15分鐘的短片，不開字幕聽一次，接着開啓Google的自動英文翻譯字幕聽一次(翻譯的準確度會因內容而異)，早晚各花30分鐘訓練，司徒發現這種訓練方式大約在三週後就可以看到效果，這裡的重點是需要專心聽，在訓練英文聽力時，千萬不要使用背景音樂方式來訓練，效果會大打折扣<br><br>
-
-司徒推薦聽Think School的影片，只要挑選Case Study的影片就可以，因爲這些影片的時間大多落在15~20分鐘<br>
+當司徒知道要去印度出差時，便開始找尋跟印度有關的影片，藉此讓自己可以更快熟悉印度的發音，而司徒的訓練方式是，找個大約15分鐘的短片，不開字幕聽一次，接著開啓Google的自動英文翻譯字幕再聽一次(翻譯的準確度會因內容而異)，早晚各花30分鐘訓練，司徒發現這種訓練方式大約在三週後就可以看到效果，而這裡的重點是需要專心聽，在訓練英文聽力時，千萬不要使用背景音樂方式來訓練，效果會大打折扣，司徒推薦聽Think School的影片，只要挑選Case Study的影片就可以，因爲這些影片的時間大多落在15~20分鐘<br>
 <img src="india_bangalore/2.jpg" class="maxSize"><br><br>
 
 新聞類的影片，司徒推薦聽DW News，尤其如下這位主播的口音，推薦多聽幾次<br>
 <img src="india_bangalore/1.jpg" class="maxSize"><br><br>
 
-由於司徒搭乘的飛機是從臺灣飛到新加坡，接著再從新加坡飛往印度邦加羅爾機場，而停留在新加坡機場的時間大約是10小時，因此，司徒就在新加坡中轉飯店休息6個小時(建議提前預訂)，第一、第二、第三航廈都有中轉飯店且不需要出境就可以入住，航廈間也都可以坐轉接車互通，新加坡機場是真的相當方便，所以中轉飯店如果客滿，可以試着到其它航廈詢問<br>
+司徒比較擔心印度的水質問題，因此，出發前，特地買了這個有濾芯的水壺，而依據朋友的經驗，印度當地的水，只能喝未開瓶的礦泉水，所以司徒就打算用這個水壺來裝礦泉水飲用<br>
+<img src="india_bangalore/167.jpg" class="maxSize"><br><br>
+
+由於司徒搭乘的飛機是從台灣飛到新加坡，接著再從新加坡飛往印度邦加羅爾機場，而停留在新加坡機場的時間大約是10小時，因此，司徒就在新加坡中轉飯店休息6個小時(建議提前預訂)，第一、第二、第三航廈都有中轉飯店且不需要出境就可以入住，航廈間也都可以坐接駁車互通，新加坡機場是真的相當方便，所以中轉飯店如果客滿，可以試著到其它航廈詢問<br>
 <img src="india_bangalore/3.jpg" class="maxSize"><br><br>
 
 房間是真的蠻多的<br>
@@ -33,10 +40,10 @@ AI =&gt; I<br>
 休息6小時大約是5300臺幣，雖然價格有點貴，不過可以好好睡上一覺，這價位還是值得<br>
 <img src="india_bangalore/5.jpg" class="maxSize"><br><br>
 
-邦加羅爾第一航廈<br>
+邦加羅爾坎皮高達機場(第一航廈)<br>
 <img src="india_bangalore/6.jpg" class="maxSize"><br><br>
 
-入住的五星級飯店，一晚要價6000臺幣，在當地算是相當高檔的飯店<br>
+入住的飯店，在當地算是相當高檔的飯店<br>
 <img src="india_bangalore/7.jpg" class="maxSize"><br>
 <img src="india_bangalore/8.jpg" class="maxSize"><br><br>
 
@@ -52,7 +59,7 @@ AI =&gt; I<br>
 <img src="india_bangalore/13.jpg" class="maxSize"><br>
 <img src="india_bangalore/14.jpg" class="maxSize"><br><br>
 
-附件的一個商場<br>
+附近的一個商場<br>
 <img src="india_bangalore/15.jpg" class="maxSize"><br><br>
 
 沿路的美景<br>
@@ -62,7 +69,7 @@ AI =&gt; I<br>
 麥當勞<br>
 <img src="india_bangalore/18.jpg" class="maxSize"><br><br>
 
-印度的超商比較少，司徒跟着路人走，才發現這家超商<br>
+印度的超商比較少，好不容易才找到這家超商<br>
 <img src="india_bangalore/19.jpg" class="maxSize"><br><br>
 
 路邊的道路有些破舊，走在路邊記得小心<br>
@@ -79,16 +86,16 @@ AI =&gt; I<br>
 印度塔塔車，司徒習慣直接喊價，所以每次搭乘的價格都不一樣<br>
 <img src="india_bangalore/25.jpg" class="maxSize"><br><br>
 
-司機發現開錯路，竟然直接原路逆向開回去<br>
+司機發現開錯路，竟然直接原路逆向開回去，哈<br>
 <img src="india_bangalore/26.jpg" class="maxSize"><br><br>
 
-原本要吃的午餐店，看了下後，還是決定吃對面的餐廳<br>
+原本要吃的午餐店，後來還是決定吃對面的咖啡廳<br>
 <img src="india_bangalore/27.jpg" class="maxSize"><br><br>
 
 超辣的玉米咖哩<br>
 <img src="india_bangalore/28.jpg" class="maxSize"><br><br>
 
-吃完午餐後，沿路散步到客戶辦公室<br>
+吃完午餐後，沿路散步到客戶的園區<br>
 <img src="india_bangalore/29.jpg" class="maxSize"><br><br>
 
 幼兒園<br>
@@ -100,11 +107,11 @@ AI =&gt; I<br>
 沿路美景<br>
 <img src="india_bangalore/32.jpg" class="maxSize"><br><br>
 
-客戶園區就是另一個世界的感覺<br>
+園區就是另一個世界的感覺<br>
 <img src="india_bangalore/33.jpg" class="maxSize"><br>
 <img src="india_bangalore/34.jpg" class="maxSize"><br><br>
 
-當天晚上跟客戶吃飯的地方，在捷運站附近<br>
+當天晚上跟客戶吃飯的地方(在捷運站附近)<br>
 <img src="india_bangalore/35.jpg" class="maxSize"><br><br>
 
 晚餐的地方<br>
@@ -114,7 +121,7 @@ AI =&gt; I<br>
 <img src="india_bangalore/36.jpg" class="maxSize"><br>
 <img src="india_bangalore/37.jpg" class="maxSize"><br><br>
 
-由於是中秋節，所以今晚的月亮特別圓，原來，國外的月亮總是特別圓是真的<br>
+由於是中秋節，所以今晚的月亮特別圓<br>
 <img src="india_bangalore/38.jpg" class="maxSize"><br>
 <img src="india_bangalore/39.jpg" class="maxSize"><br><br>
 
@@ -127,21 +134,21 @@ IPA啤酒，淡淡果香，還蠻好喝的<br>
 好吃的雞肉<br>
 <img src="india_bangalore/42.jpg" class="maxSize"><br><br>
 
-味道跟口感，蠻像蝦味仙餅乾<br>
+味道跟口感，蠻像蝦味仙<br>
 <img src="india_bangalore/43.jpg" class="maxSize"><br><br>
 
 洋蔥圈<br>
 <img src="india_bangalore/44.jpg" class="maxSize"><br><br>
 
-園區內的餐廳，裡面很多餐廳不收國外信用卡、現金，加上司徒沒有Paytm電子支付，所以只能點炒飯來吃<br>
+園區內的餐廳，裡面很多餐廳不收國外信用卡、現金<br>
 <img src="india_bangalore/45.jpg" class="maxSize"><br>
 <img src="india_bangalore/46.jpg" class="maxSize"><br><br>
 
-麥當勞雞肉卷，這雞肉卷蠻好吃的，因爲，還蠻辣的<br>
+麥當勞雞肉卷，這雞肉卷蠻好吃的<br>
 <img src="india_bangalore/47.jpg" class="maxSize"><br>
 <img src="india_bangalore/48.jpg" class="maxSize"><br><br>
 
-晚餐<br>
+晚餐的地方<br>
 <img src="india_bangalore/49.jpg" class="maxSize"><br><br>
 
 這月亮是真美<br>
@@ -167,7 +174,7 @@ IPA啤酒，淡淡果香，還蠻好喝的<br>
 邊吃飯邊看國外的月亮，這體驗還是相當棒<br>
 <img src="india_bangalore/57.jpg" class="maxSize"><br><br>
 
-司徒是依照網路分享的景點走訪，這些景點都是位於National College捷運站附近，所以司徒查了下飯店附件的捷運站，最近的捷運站就是Hoodi捷運站<br>
+司徒是依照網路分享的景點走訪，這些景點都是位於National College捷運站附近，所以司徒查了下飯店附近的捷運站，最近的捷運站就是Hoodi捷運站<br>
 <img src="india_bangalore/60.jpg" class="maxSize"><br><br>
 
 在印度，Uber是一個相當方便的交通工具，價格也相對便宜，不過，司徒有遇過，一上車後，司機會叫你把Uber訂單取消，然後開雙倍價格並要求付現金，也遇過Uber司機打電話詢問搭車地點(透過Uber App打電話)，然後講的是完全聽不懂的語言，雖然意外狀況總是難免會發生，不過畢竟還是少數狀況(司徒只有各遇過一次)，所以也不用太在意這些狀況，避免影響到旅遊興致<br>
@@ -341,6 +348,22 @@ Lalbagh Botanical Garden路口<br>
 <img src="india_bangalore/148.jpg" class="maxSize"><br><br>
 <img src="india_bangalore/149.jpg" class="maxSize"><br><br>
 <img src="india_bangalore/150.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/151.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/152.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/153.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/154.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/155.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/156.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/157.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/158.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/159.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/160.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/161.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/162.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/163.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/164.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/165.jpg" class="maxSize"><br><br>
+<img src="india_bangalore/166.jpg" class="maxSize">
 </p>
 
 <br><script type="text/javascript" src="../tail.js"></script>
