--- a/trip/india_bangalore.htm
+++ b/trip/india_bangalore.htm
@@ -180,38 +180,38 @@ IPA啤酒，淡淡果香，還蠻好喝的<br>
 在印度，Uber是一個相當方便的交通工具，價格也相對便宜，不過，司徒有遇過，一上車後，司機會叫你把Uber訂單取消，然後開雙倍價格並要求付現金，也遇過Uber司機打電話詢問搭車地點(透過Uber App打電話)，然後講的是完全聽不懂的語言，雖然意外狀況總是難免會發生，不過畢竟還是少數狀況(司徒只有各遇過一次)，所以也不用太在意這些狀況，避免影響到旅遊興致<br>
 <img src="india_bangalore/64.jpg" class="maxSize"><br><br>
 
-第一個景點是Bull Temple(位於National College捷運站附近)<br>
+Bull Temple<br>
 <img src="india_bangalore/61.jpg" class="maxSize"><br><br>
 
-第二個景點這是Lalbagh Botanical Garden(位於National College捷運站附近)<br>
+Lalbagh Botanical Garden<br>
 <img src="india_bangalore/62.jpg" class="maxSize"><br><br>
 
-最後一個景點這是Tipu Sultan's Summer Palace(位於National College捷運站附近)<br>
+Tipu Sultan's Summer Palace<br>
 <img src="india_bangalore/63.jpg" class="maxSize"><br><br>
 
 Hoodi捷運站<br>
 <img src="india_bangalore/65.jpg" class="maxSize"><br><br>
 
-沒有自動賣票機器，然後，服務窗口竟然也沒人，旁邊的Whats App看板寫着可以買票，司徒付款後，拿到一串ID，只是不知道去哪換票<br>
+沒有自動賣票機器，然後服務窗口也沒人，旁邊的Whats App看板寫着可以買票，司徒付款後，拿到一串ID數字，不知道這串ID數字可以幹嘛<br>
 <img src="india_bangalore/66.jpg" class="maxSize"><br><br>
 
-最後尋問許多人後，才知道可以到這邊買票，但是，現金是不找零錢<br>
+最後尋問許多人後，才知道可以到這邊買票，但是，現金支付是不找零錢<br>
 <img src="india_bangalore/67.jpg" class="maxSize"><br><br>
 
 最後，司徒終於拿到Token<br>
 <img src="india_bangalore/68.jpg" class="maxSize"><br><br>
 
-捷運站內還是很乾淨<br>
+捷運內還是很乾淨<br>
 <img src="india_bangalore/69.jpg" class="maxSize"><br><br>
 
-捷運月臺<br>
+捷運月台<br>
 <img src="india_bangalore/70.jpg" class="maxSize"><br>
 <img src="india_bangalore/71.jpg" class="maxSize"><br><br>
 
 車廂內<br>
 <img src="india_bangalore/72.jpg" class="maxSize"><br><br>
 
-車內的路線圖，行車中會廣播下一站，印度文、英文各廣播一次<br>
+車廂內的路線圖，快到下一站時，車廂會廣播下一站站名，印度文、英文各廣播一次<br>
 <img src="india_bangalore/73.jpg" class="maxSize"><br><br>
 
 車站內也會有路線圖<br>
@@ -220,18 +220,18 @@ Hoodi捷運站<br>
 邦加羅爾捷運，目前只有紫色、綠色兩條路線，中間有一個交會站<br>
 <img src="india_bangalore/75.jpg" class="maxSize"><br><br>
 
-蠻多人搭乘捷運<br>
+人潮還是蠻多的<br>
 <img src="india_bangalore/76.jpg" class="maxSize"><br>
 <img src="india_bangalore/77.jpg" class="maxSize"><br><br>
 
-柱子也有貼路線圖<br>
+路線圖<br>
 <img src="india_bangalore/78.jpg" class="maxSize"><br><br>
 
-等車月臺<br>
+月台<br>
 <img src="india_bangalore/79.jpg" class="maxSize"><br>
 <img src="india_bangalore/80.jpg" class="maxSize"><br><br>
 
-牆壁的路線指示<br>
+路線指示<br>
 <img src="india_bangalore/81.jpg" class="maxSize"><br><br>
 
 公車站<br>
@@ -263,18 +263,14 @@ Hoodi捷運站<br>
 <img src="india_bangalore/92.jpg" class="maxSize"><br><br>
 
 Bull Temple的參觀順序是先進去這裡<br>
-<img src="india_bangalore/91.jpg" class="maxSize"><br><br>
-
-跟隨本地人的動作就可以<br>
-<img src="india_bangalore/93.jpg" class="maxSize"><br><br>
-
-旁邊不知道是什麼東西<br>
+<img src="india_bangalore/91.jpg" class="maxSize"><br>
+<img src="india_bangalore/93.jpg" class="maxSize"><br>
 <img src="india_bangalore/94.jpg" class="maxSize"><br><br>
 
-階梯旁有個公園，司徒一開始以爲是有人在公園玩耍，結果發現是超逼真的假人<br>
+階梯旁有個公園，司徒一開始以爲是有人在公園玩耍，結果發現是超逼真的蠟像<br>
 <img src="india_bangalore/95.jpg" class="maxSize"><br><br>
 
-裡面在整修中<br>
+裡面正在整修<br>
 <img src="india_bangalore/96.jpg" class="maxSize"><br>
 <img src="india_bangalore/97.jpg" class="maxSize"><br><br>
 
@@ -291,10 +287,10 @@ Bull Temple的參觀順序是先進去這裡<br>
 門外的牛<br>
 <img src="india_bangalore/102.jpg" class="maxSize"><br><br>
 
-路上看到的公車都是比較破舊的公車<br>
+公車<br>
 <img src="india_bangalore/103.jpg" class="maxSize"><br><br>
 
-路邊賣水果的攤販<br>
+賣水果的攤販<br>
 <img src="india_bangalore/104.jpg" class="maxSize"><br><br>
 
 加油站裡面的廁所<br>
@@ -304,65 +300,131 @@ Bull Temple的參觀順序是先進去這裡<br>
 路邊的建築工人<br>
 <img src="india_bangalore/107.jpg" class="maxSize"><br><br>
 
-Lalbagh Botanical Garden路口<br>
+Lalbagh Botanical Garden<br>
 <img src="india_bangalore/108.jpg" class="maxSize"><br><br>
+
+這個路口的綠燈只有15秒<br>
 <img src="india_bangalore/109.jpg" class="maxSize"><br><br>
+
+門票是30盧比<br>
 <img src="india_bangalore/110.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/111.jpg" class="maxSize"><br><br>
+
+就是一個公園的概念<br>
+<img src="india_bangalore/111.jpg" class="maxSize"><br>
 <img src="india_bangalore/112.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/113.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/114.jpg" class="maxSize"><br><br>
+
+有些是柏油路，有些則是沙路<br>
+<img src="india_bangalore/113.jpg" class="maxSize"><br>
+<img src="india_bangalore/114.jpg" class="maxSize"><br>
 <img src="india_bangalore/115.jpg" class="maxSize"><br><br>
+
+裡面都會有販賣水果的攤販，只是蒼蠅有點多<br>
 <img src="india_bangalore/116.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/117.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/118.jpg" class="maxSize"><br><br>
+
+其它景點<br>
+<img src="india_bangalore/117.jpg" class="maxSize"><br>
+<img src="india_bangalore/118.jpg" class="maxSize"><br>
 <img src="india_bangalore/119.jpg" class="maxSize"><br><br>
+
+裡面似乎在整修<br>
 <img src="india_bangalore/120.jpg" class="maxSize"><br><br>
+
+悠閒的散步，這感覺還是相當不錯<br>
 <img src="india_bangalore/121.jpg" class="maxSize"><br><br>
+
+Tipu Sultan's Summer Palace<br>
 <img src="india_bangalore/122.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/123.jpg" class="maxSize"><br><br>
+
+可惜無法現場買票，司徒最終只能在門外拍張照片<br>
+<img src="india_bangalore/123.jpg" class="maxSize"><br>
 <img src="india_bangalore/124.jpg" class="maxSize"><br><br>
+
+賣冰淇淋的攤販<br>
 <img src="india_bangalore/125.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/126.jpg" class="maxSize"><br><br>
+
+中午在The Biere Club用餐，這窗外景色相當不錯<br>
 <img src="india_bangalore/127.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/128.jpg" class="maxSize"><br><br>
+
+在菜單上發現牛肉漢堡，基於好奇心點來吃看看，結論是，不要點冷門的食物<br>
+<img src="india_bangalore/128.jpg" class="maxSize"><br>
 <img src="india_bangalore/129.jpg" class="maxSize"><br><br>
+
+在市區看到的唯一一家星巴克<br>
+<img src="india_bangalore/126.jpg" class="maxSize"><br>
 <img src="india_bangalore/130.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/131.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/132.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/133.jpg" class="maxSize"><br><br>
+
+百貨公司<br>
+<img src="india_bangalore/131.jpg" class="maxSize"><br>
+<img src="india_bangalore/132.jpg" class="maxSize"><br>
+<img src="india_bangalore/133.jpg" class="maxSize"><br>
 <img src="india_bangalore/134.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/135.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/136.jpg" class="maxSize"><br><br>
+
+超大的公園<br>
+<img src="india_bangalore/135.jpg" class="maxSize"><br>
+<img src="india_bangalore/136.jpg" class="maxSize"><br>
 <img src="india_bangalore/137.jpg" class="maxSize"><br><br>
+
+吃飽飯後，來這裡走走還是相當不錯<br>
 <img src="india_bangalore/138.jpg" class="maxSize"><br><br>
+
+公園旁的法庭<br>
 <img src="india_bangalore/139.jpg" class="maxSize"><br><br>
+
+其它景點<br>
 <img src="india_bangalore/140.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/141.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/142.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/143.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/144.jpg" class="maxSize"><br><br>
+
+水族館<br>
+<img src="india_bangalore/141.jpg" class="maxSize"><br>
+<img src="india_bangalore/142.jpg" class="maxSize"><br>
+<img src="india_bangalore/143.jpg" class="maxSize"><br>
+<img src="india_bangalore/144.jpg" class="maxSize"><br>
 <img src="india_bangalore/145.jpg" class="maxSize"><br><br>
+
+由於喉糖已經吃完且購買不易，所以在飯店附近尋找藥局，終於找到這家有賣喉糖<br>
 <img src="india_bangalore/146.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/147.jpg" class="maxSize"><br><br>
+
+直接買30顆喉糖<br>
+<img src="india_bangalore/147.jpg" class="maxSize"><br>
 <img src="india_bangalore/148.jpg" class="maxSize"><br><br>
+
+最後一天，司徒決定去逛下電子街，電子街位於Chickpet捷運附近<br>
 <img src="india_bangalore/149.jpg" class="maxSize"><br><br>
+
+這次終於可以在窗口買票，不用跑到服務台買票<br>
 <img src="india_bangalore/150.jpg" class="maxSize"><br><br>
+
+閘口<br>
 <img src="india_bangalore/151.jpg" class="maxSize"><br><br>
+
+Chickpet捷運出口<br>
 <img src="india_bangalore/152.jpg" class="maxSize"><br><br>
+
+收費廁所<br>
 <img src="india_bangalore/153.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/154.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/155.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/156.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/157.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/158.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/159.jpg" class="maxSize"><br><br>
+
+電子街是一個很大的區域，裡面除了電子用品，還有傳統市場，也有機械相關的東西在販賣<br>
+<img src="india_bangalore/154.jpg" class="maxSize"><br>
+<img src="india_bangalore/155.jpg" class="maxSize"><br>
+<img src="india_bangalore/158.jpg" class="maxSize"><br>
+<img src="india_bangalore/159.jpg" class="maxSize"><br>
 <img src="india_bangalore/160.jpg" class="maxSize"><br><br>
+
+沿路景點<br>
+<img src="india_bangalore/156.jpg" class="maxSize"><br>
+<img src="india_bangalore/157.jpg" class="maxSize"><br><br>
+
+捷運內的廁所<br>
 <img src="india_bangalore/161.jpg" class="maxSize"><br><br>
+
+由於電子街那邊實在太混亂，所以司徒最後還是決定回飯店吃午餐<br>
 <img src="india_bangalore/162.jpg" class="maxSize"><br><br>
+
+吃完午餐後，司徒就搭乘Uber到機場，費用大約是1200盧比，如果是使用飯店接送服務，價格是4000盧比<br>
 <img src="india_bangalore/163.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/164.jpg" class="maxSize"><br><br>
-<img src="india_bangalore/165.jpg" class="maxSize"><br><br>
+
+邦加羅爾坎皮高達機場(第二航廈)，進入機場入口需要登機證，一旦進入就無法出去，司徒只有線上Check-in(沒有列印登機證)，所以出示證明後，就可以進入機場<br>
+<img src="india_bangalore/164.jpg" class="maxSize"><br>
+<img src="india_bangalore/165.jpg" class="maxSize"><br>
 <img src="india_bangalore/166.jpg" class="maxSize">
 </p>
 
